name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , containers
               , common
               , dependent-sum
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , reflex-dom-core
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , lens
               , some
               , text
               , universe
  exposed-modules:
    Frontend
  other-modules: Home
               , TicTacToe
               , Tutorial1
               , Tutorial2
               , Tutorial3
               , Tutorial4
               , Tutorial5
               , Tutorial6
               , Tutorial7
               , Tutorial8
               , Tutorial9
               , Tutorial10
               , Tutorial11
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
